--- a/src/components/nav/Navbar.css
+++ b/src/components/nav/Navbar.css
@@ -24,6 +24,7 @@
   align-items: center;
   justify-self: start;
   margin-left: 20px;
+  font-family: "PT Sans", sans-serif;
   font-size: 2rem;
   text-decoration: none;
   color: #fff;
@@ -42,7 +43,6 @@
   grid-template-columns: repeat(4, auto);
   grid-gap: 10px;
   justify-content: end;
-
   text-align: center;
   margin-right: 2rem;
 }
@@ -57,8 +57,9 @@
   display: flex;
   flex-direction: row;
   align-items: center;
-  text-decoration: none;
   padding: 0.5rem 1rem;
+  text-decoration: none;
+  font-family: "PT Sans", sans-serif;
   color: #fff;
 }
 
