--- a/src/components/nav/Navbar.css
+++ b/src/components/nav/Navbar.css
@@ -23,10 +23,10 @@
   display: flex;
   align-items: center;
   justify-self: start;
-  margin-left: 20px;
   font-family: "PT Sans", sans-serif;
   font-size: 2rem;
   text-decoration: none;
+  margin-left: 16px;
   color: #fff;
   cursor: pointer;
 }
@@ -44,7 +44,6 @@
   grid-gap: 10px;
   justify-content: end;
   text-align: center;
-  margin-right: 2rem;
 }
 
 .nav-item {
@@ -85,6 +84,10 @@ a.active {
 }
 
 @media screen and (max-width: 960px) {
+  .navbar-logo {
+    margin: 0;
+  }
+
   .nav-menu {
     width: 100%;
     height: 90vh;
