--- a/src/components/ui/Button.css
+++ b/src/components/ui/Button.css
@@ -7,16 +7,20 @@
 }
 
 .btn-primary {
-  background-color: var(--primary);
+  background-color: #fff;
   color: #242424;
-  border: 1px solid var(--primary);
+  border: 1px solid #fff;
+}
+
+.btn-primary:hover {
+  background-color: #d4d3d3;
 }
 
 .btn-outline {
   background-color: transparent;
   color: #fff;
   padding: 8px 20px;
-  border: 1px solid var(--primary);
+  border: 1px solid #fff;
   transition: all 0.3s ease-out;
 }
 
