--- a/src/components/hero/HeroSection.css
+++ b/src/components/hero/HeroSection.css
@@ -1,4 +1,4 @@
-.hero-container {
+.hero-cont {
   width: 100%;
   height: calc(100vh - 80px);
   display: flex;
@@ -11,13 +11,12 @@
   box-shadow: inset 0 0 0 1000px rgba(0, 0, 0, 0.2);
 }
 
-.hero-container > h1 {
+.hero-cont > h1 {
   margin-top: -100px;
-  font-size: 100px;
   color: #fff;
 }
 
-.hero-container > p {
+.hero-cont > p {
   margin-top: 8px;
   font-size: 32px;
   color: #fff;
@@ -36,19 +35,17 @@
 }
 
 @media (max-width: 960px) {
-  .hero-container > h1 {
+  .hero-cont > h1 {
     margin-top: -150px;
-    font-size: 70px;
   }
 }
 
 @media (max-width: 768px) {
-  .hero-container > h1 {
+  .hero-cont > h1 {
     margin-top: -100px;
-    font-size: 50px;
   }
 
-  .hero-container > p {
+  .hero-cont > p {
     font-size: 30px;
   }
 
@@ -62,39 +59,33 @@
 }
 
 @media (max-width: 300px) {
-  .hero-container {
+  .hero-cont {
     padding: 0 1rem;
   }
-  .hero-container > h1 {
-    font-size: 40px;
-  }
-
-  .hero-container > p {
+  .hero-cont > p {
     font-size: 25px;
   }
 }
 
 @media (max-height: 420px) {
-  .hero-container > h1 {
+  .hero-cont > h1 {
     margin-top: -20px;
-    font-size: 50px;
   }
 
-  .hero-container > p {
+  .hero-cont > p {
     font-size: 30px;
   }
 }
 
 @media (max-height: 300px) {
-  .hero-container {
+  .hero-cont {
     height: 100vh;
   }
-  .hero-container > h1 {
+  .hero-cont > h1 {
     margin-top: -20px;
-    font-size: 40px;
   }
 
-  .hero-container > p {
+  .hero-cont > p {
     font-size: 25px;
   }
 
