--- a/src/components/footer/Footer.css
+++ b/src/components/footer/Footer.css
@@ -1,4 +1,5 @@
 .footer-cont {
+  position: relative;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -109,6 +110,27 @@
   color: #fff;
 }
 
+.footer-up-icon {
+  position: fixed;
+  right: 1.5rem;
+  bottom: 1.5rem;
+  padding: 5px 7px;
+  border-radius: 50%;
+  background-color: #fff;
+  box-shadow: 0 6px 20px rgba(56, 125, 255, 0.17);
+}
+
+.fa-chevron-up {
+  color: #000;
+  font-size: 20px;
+  line-height: 25px;
+  text-align: center;
+}
+
+.footer-up-icon a.active {
+  border: none;
+}
+
 @media (max-width: 820px) {
   #footer-input {
     width: 100%;
@@ -140,5 +162,15 @@
     width: 100%;
     justify-content: center;
     flex-wrap: wrap;
+  }
+
+  .footer-up-icon {
+    right: 1rem;
+    bottom: 1rem;
+  }
+
+  .fa-chevron-up {
+    font-size: 16px;
+    line-height: 18px;
   }
 }
